--- a/styles/index.css
+++ b/styles/index.css
@@ -36,6 +36,7 @@ html{
     background-color: rgba(0, 0, 0, 0.087);
     border-radius: 4px;
     font-size: 1.5rem;
+    cursor: pointer;
 }
 
 
@@ -50,7 +51,7 @@ html{
 
 .car__red{
     width: 100%;
-    height: 650px;
+    height: 100vh;
 }
 .car__red img{
     position: relative;
@@ -76,6 +77,7 @@ html{
 .text p{
     font-size: 1.5rem;
     border-bottom: 1px solid #17191e;
+    cursor: pointer;
     
 }
 .botones{
@@ -138,7 +140,7 @@ html{
 
 .car__blue{
     width: 100%;
-    height: 650px;
+    height: 100vh;
     position: relative;
 
 }
@@ -167,6 +169,7 @@ html{
     font-size: 1.5rem;
     border-bottom: 1px solid #17191e;
     white-space: nowrap;
+    cursor: pointer;
     
 }
 .botones{
@@ -189,6 +192,7 @@ html{
     color: #fefefe;
     font-size: 1.5rem;
     font-weight: 600;
+    cursor: pointer;
     
 }
 
@@ -200,6 +204,7 @@ html{
     color: #393c41;
     font-size: 1.5rem;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .footer{
@@ -214,6 +219,7 @@ html{
     font-size: 1.3rem;
     font-weight: 500;
     color: #64666a;
+    cursor: pointer;
 }
 
 
