--- a/styles/index.css
+++ b/styles/index.css
@@ -176,7 +176,7 @@ html{
     width: 100%;
     padding: 0 24px;
     position: absolute;
-    bottom: 60px;
+    bottom: 46px;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
@@ -184,6 +184,7 @@ html{
     gap: 15px;
     z-index: 4000;
 }
+
 .botones button:nth-child(1){
     border: none;
     height: 40px;
@@ -207,6 +208,8 @@ html{
     cursor: pointer;
 }
 
+/* -----------FOOTER--------------- */
+
 .footer{
     width: 100%;
     height: auto;
@@ -222,5 +225,45 @@ html{
     cursor: pointer;
 }
 
+/* -------------MEDIA QUERIES---------------- */
 
+    @media (min-width:600px) {
 
+    /* ----------BOTONES MEDIA QUERY--------- */
+    .botones{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        bottom: 110px;
+        width: 100%;
+        gap: 32px;
+    }
+
+    .botones button:nth-child(1){
+        width: 100%;
+        max-width: 240px;
+        
+    }
+
+    .botones button:nth-child(2){
+        width: 100%;
+        max-width: 240px; 
+    } 
+
+    /* ---------FOOTER MEDIA QUERY---------- */
+    .footer{
+        padding: 50px 40px;
+        display: flex;
+        justify-content: center;
+        gap: 24px;
+        flex-wrap: wrap;
+        
+    }
+    .footer p{
+        display: inline-block;
+        white-space: nowrap;
+        line-height: 2px;
+    }
+
+}
