--- a/styles/index.css
+++ b/styles/index.css
@@ -16,6 +16,11 @@ html{
     left: 0;
     z-index: 5000;
 }
+
+
+
+
+
 .nav{
     width: 100%;
     height: 80px;
@@ -24,6 +29,7 @@ html{
     justify-content: space-between;
     /* background-color: blue; */
     padding: 0 14px 0 10px;
+    position: relative;
 }
 .logotipo{
     display: flex;
@@ -38,6 +44,46 @@ html{
     font-size: 1.5rem;
     cursor: pointer;
 }
+
+/* ------------ASIDE MENU------------------- */
+
+.aside{
+    width: 280px;
+    height: 100vh;
+    background-color: aqua;
+    position: fixed;
+    top: 0;
+    right: 0;
+    overflow-y: auto;
+    opacity: 0;
+    
+}
+.aside::-webkit-scrollbar {
+    display: none;
+}
+.aside__header{
+    width: 100%;
+    height: 55px;
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px;
+    margin-bottom: 12px;
+}
+.aside__text{
+    width: 100%;
+    height: auto;
+    padding: 8px 32px 48px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 17px;
+    
+}
+.aside__text p{
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+
 
 
 /* ------------Main------------ */
@@ -267,3 +313,5 @@ html{
     }
 
 }
+
+
